--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="joueurs.html">joueurs</a></li>
                 <li>communaute</li>
             </ul>
+            <button class="login">Connection</button>
         </nav>
     
     </header>
