--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
  <meta name="description" content="TeamUp.gg - La plus grande communaute E-sports">
  <meta name="keywords" content="esport, gaming, tournois, compétition, équipes">
@@ -21,7 +21,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li ><a href="csm.html" >comment sa marche</a></li>
             <li><a href="joueurs.html">joueurs</a></li>
-                <li>communaute</li>
+            <li><a href="communaute.html">communaute</a></li>
             </ul>
             <button class="login">Connection</button>
         </nav>
