--- a/joueurs.html
+++ b/joueurs.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta name="description" content="TeamUp.gg - La plus grande communaute E-sports">
-        <meta name="keywords" content="esport, gaming, tournois, compétition, équipes">
-        <meta name="author" content="TeamUp.gg">
-        <title>TeamUp.gg | La plus grande communaute E-sports</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-          <header>
+<html lang="en">
+<head>
+ <meta name="description" content="TeamUp.gg - La plus grande communaute E-sports">
+ <meta name="keywords" content="esport, gaming, tournois, compétition, équipes">
+ <meta name="author" content="TeamUp.gg">
+ <title>TeamUp.gg | La plus grande communaute E-sports</title>
+ <link rel="stylesheet" href="style.css">
+
+    <title>Document</title>
+</head>
+<body>
+    
+    <header>
         <nav>
             <div class="logo">
                 TeamUp
@@ -18,8 +21,9 @@
             <li><a href="index.html">Accueil</a></li>
             <li ><a href="csm.html" >comment sa marche</a></li>
             <li><a href="joueurs.html">joueurs</a></li>
-            <li>communaute</li>
+            <li><a href="communaute.html">communaute</a></li>
             </ul>
+            <button class="login">Connection</button>
         </nav>
     
     </header>
