--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
 niveau sur Valorant, LoL, CS2 et plus encore.</p><br>
     <br>
     <div class="button">
-        <a href="#recherche"><button class="Commencer">Commencer maintenant</button></a>
+        <a href="#recherchee"><button class="Commencer">Commencer maintenant</button></a>
         <button class="savoir">En savoir plus</button>
+        <div id="annonce-shortcut">
+            <a href="#annonce-shortcut" >Avez vous deja une equipe ?</a>
+        </div>
+        
     </div></div>
     </section>
     <hr class="small-line">
+    <div id="recherchee"></div>
          <section id="recherche">
         <div class="recherche-title">
             <h4>Recherche ton equipe ideale</h4>
@@ -84,7 +89,9 @@ niveau sur Valorant, LoL, CS2 et plus encore.</p><br>
   
 
     </section>
+    <br>
     <hr class="small-line">
+    <br>
     <section class="annonce-input">
          <h2 class="csm-title">Avez vous deja une equipe ?</h2>
          <a href="annonce.html"><button class="Recrutez">Recrutez des joueurs</button></a>
