--- a/joueurs.html
+++ b/joueurs.html
@@ -28,7 +28,7 @@
     
     </header>
     <section class="joueurs">
-        <h2 class="csm-title">Top joueurs</h2>
+        <h2 class="csm-title">Joueurs disponible</h2>
         <hr class="small-line">
         <div class="joueurs-cards">
         <div class="joueurs-card">
