--- a/annonce.html
+++ b/annonce.html
@@ -34,12 +34,12 @@
         <div class="formulaire-annonce">
             <label class="teamname" for="teamname">Nom d'equipe</label>
             <input type="text" class="ecrire-annonce" name="teamname" placeholder="Ecrivez le nom de votre equipe">
+            <label class="gamename" for="gamename">Nom du jeu</label>
+            <input type="text" class="ecrire-annonce" placeholder="entrez le nomde votre jeu">
             <label class="teamname" for="minrank">Rank minimum</label>
             <input type="text" class="ecrire-annonce" placeholder="Tapez votre minimum rank">
             <label class="maxrank" for="maxrank">Rank minimum</label>
             <input type="text" class="ecrire-annonce" placeholder="Tapez votre maximum rank">
-            <label class="gamename" for="gamename">Entrez le nom de votre jeu</label>
-            <input type="text" class="ecrire-annonce" placeholder="entrez le nomde votre jeu">
             <label class="teamname" for="description-annonce">description</label>
             <input type="text" class="ecrire-description" placeholder="Description de votre annonce..">
             
@@ -47,4 +47,5 @@
         <a href="index.html"><button class="publie">Publier l'annonce</button></a>
     </section>
     </section>
+
 </body>
