--- a/communaute.html
+++ b/communaute.html
@@ -130,6 +130,10 @@ coéquipiers sérieux. On a même participé
                 Contact<br>
             </span>
         </div>
+        <div class="footer-bottom">
+            <hr class="footerline">
+            <p class="cpr">© 2025 TeamUp.gg. Tous droits réservés. Tayeb SOUINI, Formateur Référent Youcoude Youssoufia</p>
+        </div>
     </footer>
     
 </body>
