--- a/joueurs.html
+++ b/joueurs.html
@@ -100,3 +100,46 @@ communication</p>
 
 
     </section>
+        <footer>
+        <div class="logo-footer">TeamUp
+            <span class="gg">.gg</span>  
+        <br><br>
+        
+            <p class="footer-desc">La plateforme E-sport qui connecte
+    les joueurs et les équipes du
+    monde entier.</p>
+        </div>
+        <div class="footer-title">
+            Plateforme
+        <span class="footer-text"><br>
+        Trouver une equipe<br>
+        Creer un profil<br>
+        tournois<br>
+        classements<br></span>
+        </div>
+        <div class="footer-title">
+            Jeux<br>
+            <span class="footer-text">
+                Valorant<br>
+                League of legends<br>
+                Counter strike<br>
+                Overwatch<br>
+            </span>
+        </div>
+        <div class="footer-title">
+            Support<br>
+            <span class="footer-text">
+                Centre d'aide<br>
+                Conditions d'utilisation<br>
+                Politique de confidentialite<br>
+                Contact<br>
+            </span>
+        </div>
+        
+        <div class="footer-bottom">
+            <hr class="footerline">
+            <p class="cpr">© 2025 TeamUp.gg. Tous droits réservés. Tayeb SOUINI, Formateur Référent Youcoude Youssoufia</p>
+        </div>
+    </footer>
+</body>
+</html>
