--- a/csm.html
+++ b/csm.html
@@ -97,6 +97,10 @@ tournois communautaires.</p>
                 Contact<br>
             </span>
         </div>
+        <div class="footer-bottom">
+            <hr class="footerline">
+            <p class="cpr">© 2025 TeamUp.gg. Tous droits réservés. Tayeb SOUINI, Formateur Référent Youcoude Youssoufia</p>
+        </div>
     </footer>
     </body>
 </html>
