--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
  <meta name="description" content="TeamUp.gg - La plus grande communaute E-sports">
  <meta name="keywords" content="esport, gaming, tournois, compétition, équipes">
  <meta name="author" content="TeamUp.gg">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
  <title>TeamUp.gg | La plus grande communaute E-sports</title>
  <link rel="stylesheet" href="style.css">
 
@@ -19,9 +22,9 @@
             </div>
             <ul class="nav-links">
             <li><a href="index.html">Accueil</a></li>
-            <li ><a href="csm.html" >comment sa marche</a></li>
-            <li><a href="joueurs.html">joueurs</a></li>
-            <li><a href="communaute.html">communaute</a></li>
+            <li ><a href="#csm" >comment sa marche</a></li>
+            <li><a href="#joueur">joueurs</a></li>
+            <li><a href="#communate">communaute</a></li>
             </ul>
             <button class="login">Connection</button>
         </nav>
@@ -89,13 +92,17 @@ niveau sur Valorant, LoL, CS2 et plus encore.</p><br>
   
 
     </section>
+    
     <br>
+    <div id="avez-vous"></div>
     <hr class="small-line">
     <br>
     <section class="annonce-input">
          <h2 class="csm-title">Avez vous deja une equipe ?</h2>
          <a href="annonce.html"><button class="Recrutez">Recrutez des joueurs</button></a>
     </section>
+    <div id="csm"></div>
+    <br>
     <section class="csm">
         <h2 class="csm-title">Comment ca marche ?</h2>
         <hr class="small-line">
@@ -127,7 +134,7 @@ tournois communautaires.</p>
         </div>
         </div>
 
-
+<div id="joueur"></div><br>
     </section>
         <section class="joueurs">
         <h2 class="csm-title">Joueurs disponible</h2>
@@ -195,13 +202,14 @@ soirs</p>
             <p>Main Jett/Sage, bon game sense et
 communication</p>
 
-                <button class="button-profil">Voir le profil</button>
+        <button class="button-profil">Voir le profil</button>
              
         </div>
         </div>
-
+        <a href="joueurs.html"><button class="moreplayers">Voir plus..</button></a>
 
     </section>
+    <div id="communaute"></div><br>
      <section class="communaute">
         <h2 class="csm-title">Une communaute en pleine croissance</h2>
         <hr class="small-line">
