--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ coéquipiers sérieux. On a même participé
     </section>
     
     <footer>
+        <div class="foooter">
         <div class="logo-footer">TeamUp
             <span class="gg">.gg</span>  
         <br><br>
@@ -318,7 +319,7 @@ coéquipiers sérieux. On a même participé
                 Politique de confidentialite<br>
                 Contact<br>
             </span>
-        </div><br>
+        </div></div><br>
         <div class="footer-bottom">
             <hr class="footerline">
             <p class="cpr">© 2025 TeamUp.gg. Tous droits réservés. Tayeb SOUINI, Formateur Référent Youcoude Youssoufia</p>
