--- a/joueurs.html
+++ b/joueurs.html
@@ -82,14 +82,22 @@
         </table>
     </section>
 
-        <footer>
+    <footer>
+        <div class="foooter">
         <div class="logo-footer">TeamUp
             <span class="gg">.gg</span>  
         <br><br>
         
             <p class="footer-desc">La plateforme E-sport qui connecte
     les joueurs et les équipes du
-    monde entier.</p>
+    monde entier.</p><br>
+    <p class="footer-title">Join us on</p>
+    <span class="links">
+        <img src="Link - Discord.png">
+        <img src="Link - Twitter.png">
+        <img src="Link - Twitch.png">
+        <img src="Link - YouTube.png">
+    </span>
         </div>
         <div class="footer-title">
             Plateforme
@@ -116,12 +124,11 @@
                 Politique de confidentialite<br>
                 Contact<br>
             </span>
-        </div>
-        
+        </div></div><br>
         <div class="footer-bottom">
             <hr class="footerline">
             <p class="cpr">© 2025 TeamUp.gg. Tous droits réservés. Tayeb SOUINI, Formateur Référent Youcoude Youssoufia</p>
         </div>
-    </footer>
+        </footer>
 </body>
 </html>
